--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,28 +1,31 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Project_Pemob_Techie" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Project_Pemob_Techie" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="colorPrimary">@color/black</item> <!-- Custom primary color -->
+        <item name="colorPrimaryVariant">@color/yellow</item> <!-- Variant color if needed -->
+        <item name="colorOnPrimary">@android:color/white</item> <!-- Text color on primary buttons -->
+<!--        <item name="android:windowTranslucentStatus">true</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
+<!--        <item name="android:windowNoTitle">true</item>-->
     </style>
 
     <style name="Theme.Project_Pemob_Techie.Splash" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/yellow</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+<!--        <item name="android:windowBackground">@color/yellow</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
     </style>
 
     <style name="Theme.Project_Pemob_Techie.Login" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/yellow</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+<!--        <item name="android:windowBackground">@color/yellow</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
     </style>
 
     <style name="Theme.Project_Pemob_Techie.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
+<!--        <item name="android:windowFullscreen">false</item>-->
+<!--        <item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
     <style name="CustomButton" parent="Widget.AppCompat.Button">
