--- a/app/src/main/res/layout/viewholder_recom_list.xml
+++ b/app/src/main/res/layout/viewholder_recom_list.xml
@@ -34,6 +34,9 @@
         android:fontFamily="@font/montserrat_regular"
         android:textSize="10dp"
         android:text="Title"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:paddingEnd="16dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -45,6 +48,7 @@
         android:layout_marginTop="8dp"
         android:text="Price"
         android:textSize="10dp"
+        android:paddingEnd="16dp"
         android:fontFamily="@font/montserrat_semi_bold"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/recomTitle"
@@ -53,8 +57,8 @@
     <Button
         android:id="@+id/button"
         style="@style/AddToCartButton"
-        android:layout_width="150dp"
-        android:layout_height="35dp"
+        android:layout_width="140dp"
+        android:layout_height="25dp"
         android:text="Add To Cart"
         android:textAllCaps="false"
         android:background="@drawable/add_to_cart_button"
