--- a/app/src/main/res/layout/viewholder_recom_list.xml
+++ b/app/src/main/res/layout/viewholder_recom_list.xml
@@ -31,8 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:layout_marginBottom="1dp"
         android:fontFamily="@font/montserrat_regular"
-        android:textSize="10dp"
+        android:textSize="13dp"
         android:text="Title"
         android:maxLines="1"
         android:ellipsize="end"
@@ -45,9 +46,9 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="3dp"
         android:text="Price"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:paddingEnd="16dp"
         android:fontFamily="@font/montserrat_semi_bold"
         android:textColor="@color/black"
@@ -57,9 +58,11 @@
     <Button
         android:id="@+id/button"
         style="@style/AddToCartButton"
-        android:layout_width="150dp"
-        android:layout_height="25dp"
+        android:layout_width="155dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="5dp"
         android:text="Add To Cart"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:background="@drawable/add_to_cart_button"
         app:layout_constraintBottom_toBottomOf="@+id/view"
