--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -65,7 +65,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView33"
+                android:id="@+id/bookImage"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -125,24 +125,24 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabbedLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:background="@color/white"
+                app:tabIndicatorColor="@color/yellow"
+                app:tabIndicatorHeight="4dp"
+                app:tabSelectedTextColor="@color/black"
+                app:tabTextColor="@color/gray"
+                app:layout_constraintTop_toBottomOf="@id/constraintLayout20"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="match_parent"/>
 
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Monday" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tuesday" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Wednesday" />
-            </com.google.android.material.tabs.TabLayout>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/tabbedLayout"
+                app:layout_constraintBottom_toTopOf="@id/button10" />
 
         </LinearLayout>
     </ScrollView>
