--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,9 +10,11 @@
             android:id="@+id/synopsisTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This is the description or synopsis of the book."
-            android:textSize="16sp"
             android:fontFamily="@font/montserrat_medium"
-            android:textColor="@color/black" />
+            android:text="This is the description or synopsis of the book."
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="-7dp"
+            tools:layout_editor_absoluteY="485dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
