--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     android:background="@color/yellow">
 
@@ -19,7 +20,9 @@
     <ImageView
         android:id="@+id/imageView34"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="1.0"
+        app:layout_constraintHeight_percent="0.75"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +68,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/textView96"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/change_photo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -107,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Language"
+            android:text="English"
             android:textColor="@color/gray"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -119,33 +123,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Birthday"
+            android:hint="Birthday"
+            android:textAlignment="textEnd"
             android:textColor="@color/gray"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView109" />
-
-        <TextView
-            android:id="@+id/textView109"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_medium"
-            android:text="Password"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView108" />
 
-        <TextView
+        <EditText
             android:id="@+id/textView108"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Phone Number"
+            android:hint="Phone Number"
             android:textColor="@color/black"
+            android:background="@null"
             android:textSize="16sp"
+            android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView107" />
 
@@ -155,32 +149,36 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Email"
-            android:textColor="@color/black"
+            android:textAlignment="textEnd"
+            android:textColor="@color/gray"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView106" />
 
-        <TextView
+        <EditText
             android:id="@+id/textView106"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Username"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
             android:textSize="16sp"
+            android:textAlignment="textEnd"
+            android:hint="Username"
+            android:background="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView105" />
 
-        <TextView
+        <EditText
             android:id="@+id/textView105"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Name"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:background="@null"
+            android:textAlignment="textEnd"
+            android:hint="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -206,19 +204,8 @@
             android:textColor="@color/gray"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView102" />
-
-        <TextView
-            android:id="@+id/textView102"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_medium"
-            android:text="Password"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView101" />
+
 
         <TextView
             android:id="@+id/textView101"
@@ -239,7 +226,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Email"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView99" />
@@ -262,7 +249,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Username"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView98" />
@@ -271,9 +258,12 @@
     <Button
         android:id="@+id/button12"
         android:layout_width="320dp"
+        android:background="@color/yellow"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_height="60dp"
+        android:textColor="@color/white"
         android:layout_marginBottom="32dp"
-        android:text="Logout"
+        android:text="Save"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
