--- a/app/src/main/res/layout/activity_genre_choosed.xml
+++ b/app/src/main/res/layout/activity_genre_choosed.xml
@@ -49,6 +49,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewBooks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
