--- a/app/src/main/res/layout/viewholder_recom_list.xml
+++ b/app/src/main/res/layout/viewholder_recom_list.xml
@@ -1,73 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="175dp"
-    android:layout_height="240dp"
-    android:layout_margin="8dp"
-    android:background="@drawable/card_background"
-    android:elevation="7dp">
-
-    <ImageView
-        android:id="@+id/imageView"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="175dp"
-        android:layout_height="145dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="240dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/card_background"
+        android:elevation="7dp">
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="95dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="175dp"
+            android:layout_height="145dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/recomTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="1dp"
-        android:fontFamily="@font/montserrat_regular"
-        android:textSize="13dp"
-        android:text="Title"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:paddingEnd="16dp"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        <View
+            android:id="@+id/view"
+            android:layout_width="wrap_content"
+            android:layout_height="95dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:text="Price"
-        android:textSize="12dp"
-        android:paddingEnd="16dp"
-        android:fontFamily="@font/montserrat_semi_bold"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/recomTitle"
-        app:layout_constraintTop_toBottomOf="@+id/recomTitle" />
+        <TextView
+            android:id="@+id/recomTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="1dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:textSize="13sp"
+            android:text="Title"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:paddingEnd="16dp"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <Button
-        android:id="@+id/button"
-        style="@style/AddToCartButton"
-        android:layout_width="155dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="5dp"
-        android:text="Add To Cart"
-        android:textStyle="bold"
-        android:textAllCaps="false"
-        android:background="@drawable/add_to_cart_button"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/price" />
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="Price"
+            android:textSize="12sp"
+            android:paddingEnd="16dp"
+            android:fontFamily="@font/montserrat_semi_bold"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="@+id/recomTitle"
+            app:layout_constraintTop_toBottomOf="@+id/recomTitle" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/button"
+            style="@style/AddToCartButton"
+            android:layout_width="155dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="5dp"
+            android:text="Add To Cart"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:background="@drawable/add_to_cart_button"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/price" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
