--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -122,6 +122,8 @@
         android:hint="Birthday"
         android:inputType="date"
         android:padding="12dp"
+        android:focusable="false"
+        android:clickable="true"
         android:textColor="@android:color/black"
         android:background="@drawable/rounded_corner"
         app:layout_constraintEnd_toEndOf="parent"
