--- a/app/src/main/res/layout/filter_popup.xml
+++ b/app/src/main/res/layout/filter_popup.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/account_white">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/textView62"
         android:layout_width="wrap_content"
@@ -31,115 +40,78 @@
         app:layout_constraintStart_toStartOf="@+id/textView62"
         app:layout_constraintTop_toBottomOf="@+id/textView62" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout15"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView63">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/priceSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView63">
 
-        <CheckBox
-            android:id="@+id/checkBox7"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/checkBox6"
-            app:layout_constraintTop_toBottomOf="@id/checkBox6" />
+                <RadioGroup
+                    android:id="@+id/priceRadioGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkBox6"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/checkBox5"
-            app:layout_constraintTop_toBottomOf="@id/checkBox5" />
+                <RadioButton
+                    android:id="@+id/RB_price1"
+                    android:layout_width="wrap_content"
 
-        <CheckBox
-            android:id="@+id/checkBox5"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/checkBox3"
-            app:layout_constraintTop_toBottomOf="@id/checkBox3" />
+                    android:layout_height="wrap_content"
+                    android:text="Rp 0 - 50.000"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <CheckBox
-            android:id="@+id/checkBox3"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/checkBox"
-            app:layout_constraintTop_toBottomOf="@id/checkBox" />
+                <RadioButton
+                    android:id="@+id/RB_price2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp 50.000 - 150.000"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@id/RB_price1"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textView69"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Rp0-50.000"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@id/textView68"
-            app:layout_constraintTop_toBottomOf="@id/textView68" />
+                <RadioButton
+                    android:id="@+id/RB_price3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp 150.000 - 250.000"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@id/RB_price2"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textView68"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Rp0-50.000"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@id/textView67"
-            app:layout_constraintTop_toBottomOf="@id/textView67" />
+                <RadioButton
+                    android:id="@+id/RB_price4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp 250.000 - 350.000"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@id/RB_price3"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textView67"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Rp0-50.000"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@id/textView66"
-            app:layout_constraintTop_toBottomOf="@id/textView66" />
+                <RadioButton
+                    android:id="@+id/RB_price5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp 350.000 - 450.000"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@id/RB_price4"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textView66"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Rp0-50.000"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@id/textView64"
-            app:layout_constraintTop_toBottomOf="@id/textView64" />
-
-        <TextView
-            android:id="@+id/textView64"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Rp0-50.000"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                </RadioGroup>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView70"
@@ -147,13 +119,17 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
         android:text="Genre"
+        android:paddingTop="15dp"
         android:textColor="@color/black"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="341dp" />
+        tools:layout_editor_absoluteY="341dp"
+        app:layout_constraintStart_toStartOf="@+id/priceSection"
+        app:layout_constraintTop_toBottomOf="@+id/priceSection" />
 
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
         android:id="@+id/materialAutoCompleteTextView"
+        android:clickable="true"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
@@ -197,45 +173,51 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/checkBox11" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/checkBox11"
+            app:layout_constraintRight_toLeftOf="@id/ratingBar5"/>
 
         <CheckBox
             android:id="@+id/checkBox11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/checkBox10" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/checkBox10"
+            app:layout_constraintRight_toLeftOf="@id/ratingBar4"/>
 
         <CheckBox
             android:id="@+id/checkBox10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/checkBox9" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/checkBox9"
+            app:layout_constraintRight_toLeftOf="@id/ratingBar3"/>
 
         <CheckBox
             android:id="@+id/checkBox9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/checkBox8" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/checkBox8"
+            app:layout_constraintRight_toLeftOf="@id/ratingBar2"/>
 
         <CheckBox
             android:id="@+id/checkBox8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/ratingBar"/>
 
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:progressTint="@color/yellow"
             android:rating="5"
             app:layout_constraintStart_toStartOf="parent"
@@ -245,6 +227,8 @@
             android:id="@+id/ratingBar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
             android:numStars="4"
             android:progressTint="@color/yellow"
             android:rating="4"
@@ -255,6 +239,7 @@
             android:id="@+id/ratingBar3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:numStars="3"
             android:progressTint="@color/yellow"
             android:rating="3"
@@ -265,6 +250,7 @@
             android:id="@+id/ratingBar4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:numStars="2"
             android:progressTint="@color/yellow"
             android:rating="2"
@@ -275,6 +261,7 @@
             android:id="@+id/ratingBar5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:numStars="1"
             android:progressTint="@color/yellow"
             android:rating="1"
@@ -294,4 +281,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout16" />
 
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="320dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="16dp"
+                android:text="Reset Filter"
+                android:textAllCaps="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button8" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
