--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -67,7 +67,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/white_bottom_bg" />
+            app:srcCompat="@drawable/white_bottom_bg"
+            tools:layout_editor_absoluteX="0dp" />
 
         <TextView
             android:id="@+id/textView12"
