--- a/app/src/main/res/layout/activity_payment_proof.xml
+++ b/app/src/main/res/layout/activity_payment_proof.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:contentDescription="Back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +33,7 @@
             android:fontFamily="@font/montserrat_medium"
             android:text="Checkout"
             android:textColor="@color/midgray"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView18"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:contentDescription="Payment QR Code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
@@ -56,29 +58,37 @@
         android:fontFamily="@font/montserrat_medium"
         android:text="Upload Proof of Payment"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView19" />
 
-    <EditText
-        android:id="@+id/textView52"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/rounded_corner"
-        android:backgroundTint="@color/graybox"
-        android:fontFamily="@font/montserrat_medium"
-        android:hint="Upload File Here"
-        android:inputType="text"
-        android:padding="12dp"
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        android:textStyle="bold"
+    <ImageView
+        android:id="@+id/imageViewProof"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/graybox"
+        android:contentDescription="Payment Proof Image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView51" />
+        app:layout_constraintTop_toBottomOf="@+id/textView51"  />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/yellow"
+        android:text="Select image"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewProof" />
+
 
     <TextView
         android:id="@+id/textView53"
@@ -86,23 +96,25 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_medium"
+        android:text="We will confirm your payment in a few minutes after uploading"
         android:textColor="@color/gray"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:text="We will confirm your payment in a few minutes after uploading"
-        app:layout_constraintEnd_toEndOf="@id/textView52"
-        app:layout_constraintStart_toStartOf="@id/textView52"
-        app:layout_constraintTop_toBottomOf="@+id/textView52" />
+        app:layout_constraintEnd_toEndOf="@id/button6"
+        app:layout_constraintStart_toStartOf="@id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="320dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/yellow"
         android:text="Confirm"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@+id/button8"
+        app:layout_constraintEnd_toEndOf="@id/button8"
+        app:layout_constraintStart_toStartOf="@id/button8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
