--- a/app/src/main/res/layout/activity_payment_scan.xml
+++ b/app/src/main/res/layout/activity_payment_scan.xml
@@ -73,6 +73,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView49"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <TextView
+        android:id="@+id/textView50"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Payment due: Rp 120.000"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView17" />
+
     <Button
         android:id="@+id/button5"
         android:layout_width="320dp"
