--- a/app/src/main/res/layout/viewholder_checkout_confirmation.xml
+++ b/app/src/main/res/layout/viewholder_checkout_confirmation.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -57,16 +57,4 @@
         app:layout_constraintStart_toStartOf="@+id/textView66"
         app:layout_constraintTop_toBottomOf="@+id/textView66" />
 
-    <TextView
-        android:id="@+id/textView68"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="1"
-        android:fontFamily="@font/montserrat_medium"
-        android:textColor="@color/gray"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView67"
-        app:layout_constraintTop_toTopOf="@id/textView67" />
 </androidx.constraintlayout.widget.ConstraintLayout>
