Add Ratings and Reviews FrontEnd

--- a/app/src/main/res/layout/activity_genre.xml
+++ b/app/src/main/res/layout/activity_genre.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/montserrat_medium"
             android:text="Genre"
             android:textColor="@color/midgray"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView22"
             app:layout_constraintTop_toTopOf="parent" />
