--- a/app/src/main/res/layout/activity_history_ongoing.xml
+++ b/app/src/main/res/layout/activity_history_ongoing.xml
@@ -39,10 +39,6 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/tvOrderTitle"
@@ -75,10 +71,10 @@
         android:id="@+id/tvAddressTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:text="Address"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvOrderStatus"
@@ -89,8 +85,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Recipient's address will appear here."
-        android:textSize="14sp"
         android:layout_marginTop="8dp"
+        android:textSize="14sp"
         android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toBottomOf="@id/tvAddressTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,8 +98,8 @@
         android:layout_height="wrap_content"
         android:text="Item(s)"
         android:textSize="16sp"
-        android:textColor="@color/black"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvAddressContent"
@@ -193,7 +189,6 @@
         android:layout_height="wrap_content"
         android:text="Totals:"
         android:textSize="14sp"
-        android:paddingBottom="8dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:fontFamily="@font/montserrat_medium"
@@ -213,12 +208,11 @@
         app:layout_constraintTop_toTopOf="@id/tvTotalsLabel"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
     <Button
-        android:id="@+id/btnReview"
+        android:id="@+id/btnReceived"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Review Your Items"
+        android:text="Order Received"
         android:backgroundTint="@color/yellow"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat_medium"
@@ -228,15 +222,15 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/tvReviewStatus"
+        android:id="@+id/tvPaymentPending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*You have reviewed the items."
+        android:text="*Please wait for your payment to be confirmed"
         android:textColor="@color/gray"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/btnReview"
+        app:layout_constraintTop_toBottomOf="@+id/btnReceived"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
