--- a/app/src/main/res/layout/fragment_ongoing.xml
+++ b/app/src/main/res/layout/fragment_ongoing.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TextView jika daftar kosong -->
     <TextView
         android:id="@+id/textOngoingEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nothing to show here\nYou don't ongoing any orders"
+        android:text="Nothing to show here.\nYou don't have any ongoing orders."
         android:textSize="16sp"
         android:gravity="center"
         android:textColor="@color/gray"
@@ -20,7 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView untuk daftar ongoing -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerOngoing"
         android:layout_width="match_parent"
