--- a/app/src/main/res/layout/viewholder_completed.xml
+++ b/app/src/main/res/layout/viewholder_completed.xml
@@ -20,7 +20,7 @@
         android:id="@+id/tvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Package is still on the way."
+        android:text="Package has been delivered."
         android:textColor="@color/gray"
         android:textSize="14sp"
         android:fontFamily="@font/montserrat_medium"
