--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -28,11 +28,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/account_white" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView35"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="115dp"
+        app:shapeAppearanceOverlay="@style/RoundPicture"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -258,12 +260,11 @@
     <Button
         android:id="@+id/button12"
         android:layout_width="320dp"
-        android:background="@color/yellow"
-        android:fontFamily="@font/montserrat_medium"
         android:layout_height="60dp"
         android:textColor="@color/white"
         android:layout_marginBottom="32dp"
-        android:text="Save"
+        android:text="Save Changes"
+        style="@style/RoundedButton"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
