--- a/app/src/main/res/layout/activity_end_of_checkout.xml
+++ b/app/src/main/res/layout/activity_end_of_checkout.xml
@@ -87,6 +87,10 @@
         android:layout_marginBottom="16dp"
         android:text="Back To Homepage"
         android:textAllCaps="false"
+        android:background="@drawable/add_to_cart_button"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
