--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.wishlist.WishlistFragment">
 
     <TextView
@@ -20,20 +21,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="19dp"
-            android:padding="2dp"
-            android:src="@drawable/baseline_arrow_back_24" />
-
         <TextView
             android:id="@+id/textWishlistPage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:fontFamily="@font/montserrat_medium"
             android:padding="2dp"
@@ -45,7 +38,7 @@
             android:id="@+id/cartWishlist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_weight="0"
             android:src="@drawable/baseline_shopping_cart_24" />
