--- a/app/src/main/res/layout/viewholder_genre.xml
+++ b/app/src/main/res/layout/viewholder_genre.xml
@@ -12,13 +12,13 @@
         android:id="@+id/textView58"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:text="Genre"
         android:fontFamily="@font/montserrat_bold"
-        android:textStyle="bold"
-        android:textSize="16dp"
+        android:text="Genre"
         android:textColor="@color/black"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
