--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Project_Pemob_Techie" parent="Theme.MaterialComponents.Light.NoActionBar">
-<!--        <item name="android:windowBackground">@color/white</item>-->
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="colorPrimary">@color/black</item> <!-- Custom primary color -->
-        <item name="colorPrimaryVariant">@color/yellow</item> <!-- Variant color if needed -->
-        <item name="colorOnPrimary">@android:color/white</item> <!-- Text color on primary buttons -->
-<!--        <item name="android:windowTranslucentStatus">true</item>-->
-<!--        <item name="android:windowFullscreen">true</item>-->
-<!--        <item name="android:windowNoTitle">true</item>-->
+        <item name="colorPrimary">@color/yellow</item>
+        <item name="colorPrimaryVariant">@color/yellow</item>
+        <item name="colorOnPrimary">@android:color/white</item>
     </style>
 
     <style name="Theme.Project_Pemob_Techie.Splash" parent="Theme.AppCompat.Light.NoActionBar">
@@ -32,15 +28,29 @@
 
     <style name="TabLayoutTextStyle" parent="TextAppearance.Design.Tab">
         <item name="android:fontFamily">@font/montserrat_regular</item>
-        <item name="android:textSize">14sp</item> <!-- You can adjust the text size here -->
+        <item name="android:textSize">14sp</item>
+    </style>
+    
+    <style name="RoundPicture">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
     <style name="CustomButton" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/montserrat_semi_bold</item>
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:background">@drawable/rounded_corner_button</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="RoundedButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/montserrat_semi_bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/super_rounded_corner_button</item>
         <item name="android:padding">8dp</item>
     </style>
 
@@ -48,7 +58,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/montserrat_regular</item>
-        <item name="android:textSize">10dp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:background">@drawable/add_to_cart_button</item>
         <item name="android:padding">5dp</item>
     </style>
